--- a/packages/good-react-components/package.json
+++ b/packages/good-react-components/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "good-react-components",
+  "name": "gromponents",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "umd:main": "dist/index.umd.js",
+  "module": "dist/index.m.js",
+  "esmodule": "dist/index.modern.js",
   "types": "dist/index.d.ts",
   "source": "src/index.tsx",
   "scripts": {
